kubernetes-deployments/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapp-mysql
  labels:
    app: simpleapp
spec:
  ports:
    - port: 3306
  selector:
    app: simpleapp
    tier: mysql
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: simpleapp-mysql
  labels:
    app: simpleapp
spec:
  selector:
    matchLabels:
      app: simpleapp
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: simpleapp
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
